cmake_minimum_required(VERSION 3.1.0)

project(PCA9955B VERSION 0.3 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_library(WIRINGPI_LIBRARIES NAMES wiringPi)

set(
    SOURCES 
    main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PCA9955B_Base.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PCA9955B.cpp
    )

set(
    HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/PCA9955B_Base.h
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/PCA9955B.h
    )
    
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

target_link_libraries(${PROJECT_NAME} PUBLIC ${WIRINGPI_LIBRARIES})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)

message(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
